Text2Image workshop added

--- a/ws_01.ipynb
+++ b/ws_01.ipynb
@@ -9,36 +9,13 @@
    "source": [
     "# VSB,FEI - Generative AI Workshop\n",
     "\n",
-    "The aim of the workshop is to get an overview of data analysis and deep learning techniques in the generative artificial intelligence (GenAI) domain.\n",
+    "The aim of the workshop is to get an overview of possibilities in the generative artificial intelligence (GenAI) domain.\n",
     "\n",
-    "* We will use [Python](https://www.python.org/), [Huggingface](https://huggingface.co/) and [Tensorflow](https://www.tensorflow.org/).\n",
+    "## 🔎 Do you know any famous models from this area?\n",
     "\n",
-    "**The exercise will cover these topics:**\n",
-    "* GenAI tools for image data using Huggingface models\n",
-    "<!-- * LLM usage for text generating with Huggingface API -->\n",
-    "* Vector representation of text data and searching for similar words using vector distance \n",
-    "* Design of own deep learning model for generating \"Harry Potter\"-like text using Keras framework from scratch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "435ce64b-6cd8-4c36-abcc-2fcb7cca449b",
-   "metadata": {},
-   "source": [
-    "# 🔎 What is the Generative AI? 🔎\n",
-    "* What is usually a *backbone* of these systems?\n",
-    "* What is an algorithm?\n",
-    "* What is a machine/deep learning?\n",
-    "* How does a machine or deep learning differ?\n",
-    "* How does machine/deep learning differ from algorithms designed by humans?\n",
+    "* We will use [Python](https://www.python.org/) and [Huggingface](https://huggingface.co/).\n",
     "\n",
-    "![meme01](https://github.com/rasvob/PopAI-VSB-Workshop/blob/main/images/dl_meme_02.jpg?raw=true)\n",
-    "\n",
-    "## Can you give some examples of usage of such models?\n",
-    "* 💡 Images, text, audio, video 💡\n",
-    "* Are these areas somehow interconnected?\n",
-    "\n",
-    "## 🔎 Do you know any famous models from this area?"
+    "![meme01](https://github.com/rasvob/PopAI-FEI-Workshop/blob/main/images/ai_meme_02.jpg?raw=true)"
    ]
   },
   {
@@ -49,8 +26,8 @@
     "## Let's install the basic libraries first\n",
     "\n",
     "* We will use HuggingFace library for the **Stable Diffusion** model\n",
+    "    * https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0\n",
     "    * 🔎 What is a **Text-to-Image** task?\n",
-    "    * We will use this model https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0\n",
     "\n",
     "* HuggingFace is an open source data science and machine learning platform.\n",
     "    * It acts as a hub for AI experts and enthusiasts—like a GitHub for AI.\n",
@@ -67,18 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install transformers diffusers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22652e29-a4ea-4f13-92ea-9c27a54239cb",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "!pip install transformers diffusers\n",
     "!pip install invisible_watermark transformers accelerate safetensors"
    ]
   },
@@ -89,7 +55,8 @@
    "source": [
     "## Running own Stable Diffusion instance is quite easy\n",
     "* You just need to download the pretrained model and load it into the GPU\n",
-    "*💡 There are many different models in the HuggingFace Hub"
+    "* There are many different models in the [HuggingFace Models Hub](https://huggingface.co/models)\n",
+    "    * 💡 Filter by task, e.g. Text-to-Image"
    ]
   },
   {
@@ -103,7 +70,10 @@
     "import torch\n",
     "\n",
     "pipe = DiffusionPipeline.from_pretrained(\"stabilityai/stable-diffusion-xl-base-1.0\", torch_dtype=torch.float16, use_safetensors=True, variant=\"fp16\")\n",
-    "pipe.to(\"cuda\")"
+    "# pipe.to(\"cuda\")\n",
+    "\n",
+    "## You can specify the device to use\n",
+    "pipe.to(\"cuda:1\")"
    ]
   },
   {
@@ -112,8 +82,7 @@
    "metadata": {},
    "source": [
     "## Now the model is ready and you can start to use it\n",
-    "* 💡 The most important part is so-called **prompt** definition\n",
-    "### 🔎 What is the **prompt**?"
+    "* 💡 The most important part is so-called **prompt** definition - the same concept as in the ChatGPT"
    ]
   },
   {
@@ -121,7 +90,7 @@
    "id": "f79b9fed-8979-404f-a639-7f287bcb4d73",
    "metadata": {},
    "source": [
-    "# Let's create our own image using the model! 🙂\n",
+    "# Let's create our own image using the model\n",
     "\n",
     "#### 💡 TIP: Run the code multiple times if you do not like the result 🙂"
    ]
@@ -164,8 +133,7 @@
    "metadata": {},
    "source": [
     "# The most difficult part is to define the prompt\n",
-    "* There are several tips&tricks how to get maximum out of the model\n",
-    "* We will try some of them"
+    "* There are several *tips&tricks* how to get maximum out of the model"
    ]
   },
   {
@@ -267,12 +235,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d9f9f1f",
+   "metadata": {},
+   "source": [
+    "![meme02](https://github.com/rasvob/PopAI-FEI-Workshop/blob/main/images/ai_meme_01.jpg?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "309116ed-9681-4487-99ea-0c5c465f706b",
    "metadata": {},
    "source": [
     "# Sometimes it is good to specify if you want to have 3D or 2D image, otherwise it is random\n",
-    "* You can use 2d, sketch for 2D\n",
-    "* 3d, unreal engine, unity, octane render for 3D"
+    "* You can use **2d, sketch** for 2D\n",
+    "* **3d, unreal engine, unity, octane render** for 3D"
    ]
   },
   {
@@ -305,34 +281,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "431444e1-868c-42cb-8e7f-1761cf534f5a",
-   "metadata": {},
-   "source": [
-    "# Also some specific styling is possible, e.g. anime\n",
-    "* 💡 It is a good idea to add some artists style as well"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3778de9-fcbe-468f-b3db-8bbda3469453",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = \"A knight riding a majestic lion, anime, studio ghibli, akira toriyama\"\n",
-    "\n",
-    "image = pipe(prompt=prompt).images[0]\n",
-    "\n",
-    "image"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fb221ba2-3414-4103-9a9c-172fbb674c99",
    "metadata": {},
    "source": [
     "# If you want to have some more detailed and vibrant image it is possible to add keywords like:\n",
-    "* hyper realism, detailed digital painting, vibrant colors, artstation"
+    "* **hyper realism, detailed digital painting, vibrant colors, artstation**"
    ]
   },
   {
@@ -357,38 +310,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7373e553-ccc4-4e3f-9a88-42db826df93e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = \"A knight riding a majestic lion, cinematic, [field of flowers], [minecraft], stormwind city\"\n",
-    "\n",
-    "image = pipe(prompt=prompt).images[0]\n",
-    "\n",
-    "image"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1248ebe1-cb3c-4be5-be74-8949e8a7a106",
    "metadata": {},
    "source": [
-    "# If you are interested in this topic I recommend to visit [lexica.art](https://lexica.art/) or [https://www.reddit.com/r/StableDiffusion/](https://www.reddit.com/r/StableDiffusion/) 🙂"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "905fea1b-1143-4e3f-9d17-d052d66799fe",
-   "metadata": {},
-   "source": [
-    "# Final task\n",
-    "1.  Visit https://lexica.art/\n",
-    "2.  Find some image that you like with a more complicated query\n",
-    "3.  Try to take the query and run it using your model\n",
-    "4.  Was the result the same? Why?\n",
-    "5.  Create your own prompt, generate and save the image"
+    "# If you are interested in this topic I recommend to visit [lexica.art](https://lexica.art/) or [https://www.reddit.com/r/StableDiffusion/](https://www.reddit.com/r/StableDiffusion/) 🙂\n",
+    "\n",
+    "### 💡 You can try it even using web-based GUI on [HuggingFace Spaces](https://huggingface.co/spaces/stabilityai/stable-diffusion)"
    ]
   }
  ],
