--- a/ws_01.ipynb
+++ b/ws_01.ipynb
@@ -70,10 +70,10 @@
     "import torch\n",
     "\n",
     "pipe = DiffusionPipeline.from_pretrained(\"stabilityai/stable-diffusion-xl-base-1.0\", torch_dtype=torch.float16, use_safetensors=True, variant=\"fp16\")\n",
-    "# pipe.to(\"cuda\")\n",
+    "pipe.to(\"cuda\")\n",
     "\n",
     "## You can specify the device to use\n",
-    "pipe.to(\"cuda:1\")"
+    "# pipe.to(\"cuda:1\")"
    ]
   },
   {
